# deploy-webhook-relay

./: .gitignore  pyproject.toml
environment/production/: .env.example  Dockerfile  README.md  docker-compose.yaml  requirements.txt
environment/production/app/: main.py  notifications.py
environment/test/: .env.example  Dockerfile  README.md  docker-compose.yaml  requirements.txt
environment/test/app/: main.py  notifications.py
tests/: conftest.py  test_notifications.py  test_relays.py
tests/fixtures/: production_direct.json  production_merge.json  test_merge.json
